Fix overflow when menu is opened.

--- a/sass/buddybuildr.scss
+++ b/sass/buddybuildr.scss
@@ -247,8 +247,8 @@ a { color: $primary-color; @include animate( color, 320ms );
 }
 
 .responsive {
-	.site-branding {padding: 10px; height: 60px;}
-	.basic_icons { padding: 10px 0px; position: relative; right: 10px; }
+	.site-branding {padding: 0 10px; height: 60px;}
+	/*.basic_icons {position: relative; right: 10px; }*/
 	.main-navigation a {padding: 15px 10px;}
 }
 
